dt-ui-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitaltwin-ui
spec:
  selector:
    matchLabels:
      app: digitaltwin-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: digitaltwin-ui
    spec:
      containers:
        - name: digitaltwin-ui-app
          image: farhadh/digitaltwin-ui
          ports:
            - containerPort: 80
