dt-ui-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digitaltwin-ui-service
spec:
  selector:
    app: digitaltwin-ui
  ports:
    - protocol: TCP
      port: 90
      targetPort: 80
  type: NodePort
