management-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: managementservice-srv
spec:
  type: NodePort
  selector:
    app: management
  ports:
    - name: management
      protocol: TCP
      port: 80
      targetPort: 80
